第 5 期：增加Spring Security安全配置 1. 用户加密方式迁移用 BCrypt加密。 2. "/cart/**", "/user/exit"必须登录才能访问。 3. 密码修改安全 从 SecurityContext 获取当前登录用户，只能修改自己的密码，修改成功后强制登出，必须用新密码重新登录。

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!--	添加spring security 依赖	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!-- Thymeleaf Spring Security 集成 -->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
