第 10 期：实现多级缓存系统，提升系统性能和响应速度。 1. 设计并实现基于 Caffeine + Redis 的两级缓存架构，在 MultiLevelCacheService 接口中定义统一缓存操作API。 2. 在 MultiLevelCacheServiceImpl 类中实现缓存读取策略：L1-Caffeine -> L2-Redis -> Database，提高缓存命中率。 3. 配置 CacheConfig 类管理不同缓存区域的过期时间，包括商品类型(24小时)、首页商品列表(1小时)、商品详情(2小时)、搜索结果(30分钟)。 4. 创建缓存管理页面 cacheManagement.html，提供缓存统计信息展示和手动清除功能。 5. 实现缓存预热机制，在 CacheWarmupService 中预加载商品类型、首页商品等热点数据。 6. 在仪表盘页面 dashboard.html 集成缓存性能监控图表，实时展示缓存命中率、请求次数等关键指标。

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,26 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<!-- Redis Cache -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<!-- Spring Cache -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+		<!-- Caffeine Cache -->
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+		</dependency>
+		<!-- Lettuce for Redis connection pool -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
