--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,38 @@ spring.servlet.multipart.max-file-size=50MB
 #默认总文件大小是10MB，max-request-size设置总上传文件大小
 spring.servlet.multipart.max-request-size=500MB
 
+###
+## Redis缓存配置
+###
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.database=0
+# 连接池配置
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.lettuce.pool.max-wait=-1ms
+# 连接超时时间
+spring.redis.timeout=3000ms
+
+###
+## 缓存过期时间配置（秒）
+###
+# 商品类型信息：24小时
+cache.ttl.goods-types=86400
+# 首页商品列表：1小时
+cache.ttl.lasted-goods=3600
+# 商品详情：2小时
+cache.ttl.goods-detail=7200
+# 搜索结果：30分钟
+cache.ttl.search-result=1800
+
+###
+## Caffeine本地缓存配置
+###
+# 最大缓存条目数
+cache.caffeine.max-size=1000
+# 写入后过期时间（分钟）
+cache.caffeine.expire-after-write=60
+
