第 11 期：优化并发下单机制，提升用户体验和数据安全性 1. 实现分布式锁防止超卖：在 CartServiceImpl.submitOrder() 方法中集成 Redis 分布式锁机制，使用 RedisLockUtil 工具类对商品库存操作加锁，防止高并发场景下的库存超卖问题。 2. 优化库存扣减逻辑：改进 CartMapper.xml 中的 updateStore SQL 语句，使用 WHERE stock >= #{gshoppingnum} 悲观锁条件确保原子性操作，配合 @Transactional 事务注解实现失败回滚。 3. 解决金额精度问题：将 Order.amount、Goods.goprice、Goods.grprice 等金额字段从 Double 类型升级为 BigDecimal，避免浮点数计算导致的精度丢失（如20.999999998）；创建 MoneyUtil 工具类统一处理金额格式化和计算。 4. 优化支付交互体验：在 myOrder.html、pay.html 中改进支付流程，添加支付前确认对话框、处理中提示、成功/失败反馈等交互细节；修复支付按钮点击无响应的问题，确保每个操作都有明确的用户反馈。 5. 修复弹窗样式问题：在 custom.css 中新增 Element Plus 风格的对话框和提示框样式，规范图标大小（20px × 20px 和 48px × 48px），修复确认对话框中感叹号图标撑满整个页面的bug，提升视觉体验。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,15 @@ cache.caffeine.max-size=1000
 # 写入后过期时间（分钟）
 cache.caffeine.expire-after-write=60
 
+###
+## 数据库事务和连接池优化配置
+###
+# 事务超时时间（秒）
+spring.transaction.default-timeout=30
+# HikariCP连接池配置（Spring Boot 2.x默认使用HikariCP）
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
