第 12 期：页面优化 1. 用户端界面调整 2. 主色调变为橙黄色，订单添加分页查询 3. 添加粒子特效 4. 添加了几个商品

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,15 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=500MB
 
 ###
+## 静态资源配置（开发环境热加载）
+###
+# 禁用静态资源缓存，使图片等资源能够实时更新
+spring.web.resources.cache.period=0
+spring.web.resources.chain.cache=false
+# 静态资源路径
+spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/static/
+
+###
 ## Redis缓存配置
 ###
 spring.redis.host=localhost
